<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/metric.16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorTextBlackSecondaryOrIcon"
            android:gravity="center"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/string_ballance"
            style="@style/defaultStyle.text.title"/>
        <TextView
            android:id="@+id/txtKenAvaliable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/metric.8dp"
            style="@style/defaultStyle.text.title"/>
    </LinearLayout>
    <View
        android:background="@color/colorTextBlackDivider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/metric.8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/metric.16dp"
        android:text="@string/string_nick_receiver"
        style="@style/defaultStyle.text.subhead"/>
    <chat.ola.vn.view.OlaQuickTypingSuggestedText
        android:id="@+id/txtKenReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/general_hint_remind_receiver_nick"
        android:maxLines="1"
        android:imeOptions="actionNext"
        style="@style/defaultStyle.edittext"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/metric.16dp"
        android:text="@string/string_number_ken"
        style="@style/defaultStyle.text.subhead"/>
    <EditText
        android:id="@+id/txtKenValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/general_hint_ken_transfer_amount"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        style="@style/defaultStyle.edittext"/>
    <Button
        android:gravity="center"
        android:id="@+id/nextStepButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/metric.36dp"
        android:layout_marginTop="@dimen/metric.24dp"
        android:text="@string/string_ok"
        style="@style/defaultStyle.button.green"/>
</LinearLayout>
