<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <chat.ola.vn.view.AutoScrollTextView
        android:gravity="center"
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_select_vip"
        style="?attr/dialog.header"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView
            android:id="@+id/lvVipList"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/transparent"
            android:fastScrollEnabled="true"
            style="?attr/commont.list"/>
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:id="@+id/txtEmptyLable"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_empty_vip"/>
    </FrameLayout>
    <LinearLayout
        android:padding="@dimen/metric.4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/string_close"
            android:layout_weight="1"
            style="?attr/commont.button"/>
        <Button
            android:id="@+id/btnBuyNewVip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/metric.4dp"
            android:text="@string/string_buy_vip"
            android:layout_weight="1"
            style="@style/defaultStyle.button.green"/>
    </LinearLayout>
</LinearLayout>
