<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="top|left"
        android:orientation="vertical"
        android:padding="@dimen/metric.16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/colorTextBlackPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/metric.16dp"
            android:text="@string/string_password"
            style="@style/defaultStyle.text.subhead"/>
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/metric.8dp"
            android:hint="@string/hint_enter_set_your_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            style="@style/defaultStyle.edittext"/>
        <TextView
            android:gravity="center"
            android:id="@+id/txtAccountTipTextView"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/metric.8dp"
            android:text="@string/string_password_hint"
            style="@style/defaultStyle.text.caption"/>
        <Button
            android:id="@+id/nextStepButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/metric.48dp"
            android:layout_marginTop="@dimen/metric.16dp"
            android:text="@string/string_next"
            style="@style/defaultStyle.button"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/loadingProgressBar"
        android:background="@color/translucent_black_38_percent"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="@dimen/metric.48dp"
            android:layout_height="@dimen/metric.48dp"/>
    </FrameLayout>
</FrameLayout>
