<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/dialog.header">
        <ImageView
            android:layout_width="@dimen/general.dialog.icon.thumb.size"
            android:layout_height="@dimen/general.dialog.icon.thumb.size"
            android:src="@drawable/ola_logo_trans"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/txtItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/metric.4dp"
            android:layout_marginRight="@dimen/metric.4dp"
            android:text="@string/message_like_app"
            style="?attr/dialog.header.title.single"/>
    </LinearLayout>
    <TextView
        android:gravity="top|left"
        android:autoLink="all"
        android:id="@+id/txtMeItemContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/metric.8dp"
        android:layout_marginTop="@dimen/metric.8dp"
        android:layout_marginRight="@dimen/metric.8dp"
        android:minHeight="50dp"
        android:text="@string/message_like_app_content"
        style="?attr/dialog.content.text"/>
    <LinearLayout
        android:id="@+id/linearFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/metric.8dp">
        <Button
            android:id="@+id/btnButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/metric.4dp"
            android:text="@string/string_like"
            android:layout_weight="1"
            style="@style/defaultStyle.button.green"/>
        <Button
            android:id="@+id/btnButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/metric.4dp"
            android:text="@string/string_close"
            android:layout_weight="1"
            style="?attr/commont.button"/>
    </LinearLayout>
</LinearLayout>
