<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorOlaPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <TextView
        android:textSize="@dimen/text.size.body1"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_choose_language_vi"/>
    <TextView
        android:textSize="@dimen/text.size.body1"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_choose_language_en"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/metric.8dp">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/metric.8dp">
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:id="@+id/btnLanguageVietnamese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/metric.8dp">
                <ImageView
                    android:layout_width="@dimen/general.icon.media.size"
                    android:layout_height="@dimen/general.icon.media.size"
                    android:src="@drawable/ic_language_vi"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:textSize="@dimen/text.size.body1"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_language_vietnamese"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:id="@+id/btnLanguageEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/metric.8dp">
                <ImageView
                    android:layout_width="@dimen/general.icon.media.size"
                    android:layout_height="@dimen/general.icon.media.size"
                    android:src="@drawable/ic_language_eng"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:textSize="@dimen/text.size.body1"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_language_english"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_gravity="center"
            android:id="@+id/btnLanguageDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/metric.8dp"
            android:text="@string/string_language_default"
            style="@style/defaultStyle.button.green"/>
    </LinearLayout>
</LinearLayout>
