<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="@dimen/metric.topbar.noshadow.42dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/metric.16dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:textColor="@color/colorTextBlackPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_account"
                style="@style/defaultStyle.text.subhead"/>
            <EditText
                android:id="@+id/txtNickOla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/metric.8dp"
                android:hint="@string/hint_enter_nick_name_you_want_to_create"
                android:maxLines="1"
                android:imeOptions="actionDone"
                style="@style/defaultStyle.edittext.username">
                <requestFocus/>
            </EditText>
            <TextView
                android:textSize="@dimen/text.size.caption"
                android:textStyle="italic"
                android:textColor="@color/red"
                android:id="@+id/txtAccountErrorInfo"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/metric.4dp"
                android:text="@string/hint_enter_nick_name_you_want_to_create"/>
            <TextView
                android:gravity="center"
                android:id="@+id/txtAccountTipTextView"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/metric.16dp"
                android:text="@string/string_nick_hint"
                style="@style/defaultStyle.text.caption"/>
            <Button
                android:id="@+id/nextStepButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/metric.48dp"
                android:layout_marginTop="@dimen/metric.16dp"
                android:text="@string/string_register"
                style="@style/defaultStyle.button.green"/>
            <com.mg.ola.common.widget.OlaTextView
                android:gravity="center"
                android:id="@+id/termAndConditionTextView"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/metric.16dp"
                android:text="@string/string_term_hint"
                style="@style/defaultStyle.text.caption"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/ola_top_action_bar_center_title_layout"/>
    <FrameLayout
        android:id="@+id/loadingProgressBar"
        android:background="@color/translucent_black_38_percent"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="@dimen/metric.48dp"
            android:layout_height="@dimen/metric.48dp"/>
    </FrameLayout>
</FrameLayout>
