<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:paddingTop="@dimen/metric.topbar.noshadow.42dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/metric.16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtVenueName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/metric.16dp"
                android:hint="@string/string_venue_name"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                style="@style/defaultStyle.edittext"/>
            <EditText
                android:id="@+id/txtVenueAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/metric.16dp"
                android:hint="@string/string_address"
                android:maxLines="1"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                style="@style/defaultStyle.edittext"/>
            <EditText
                android:id="@+id/txtVenueDescript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/metric.16dp"
                android:hint="@string/string_description"
                android:lines="4"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                style="@style/defaultStyle.edittext"/>
            <Button
                android:gravity="center"
                android:id="@+id/btnCreateVenue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/metric.36dp"
                android:layout_marginTop="@dimen/metric.24dp"
                android:text="@string/string_create_venue"
                style="@style/defaultStyle.button.green"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/loadingProgressBar"
        android:background="@color/translucent_black_38_percent"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="@dimen/metric.48dp"
            android:layout_height="@dimen/metric.48dp"/>
    </FrameLayout>
    <include layout="@layout/ola_top_action_bar_layout"/>
</FrameLayout>
